maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:18: error: recursive variable isFacingWall needs type
  var isFacingWall = isFacingWall();
                     ^